# cw_addr_list

./: Cargo.toml  Makefile  cw_address_list_v0.1.0.wasm
schema/: cw_address_list.json
schema/raw/: query.json
src/: contract.rs  multitest.rs
